fix chekstyle error and add maven script